--- a/invest.html
+++ b/invest.html
@@ -207,136 +207,116 @@
         </div>
     </section>
     
-    <section>
-    <div class="carouselContainer">
-        <div class="eachCarousel">
-            <img src="./img/bitcoin-icon.png" alt="">
-            <article class="carouselDesc">
-                <h1 class="carouselTitle">Starter Plan</h1>
-                <p class="carouselPara">Plan Price: $26/R467</p>
-                <div class="carouselPrice">
+   <section>
+    <table class="pricingTable">
+        <tr>
+            <td>
+                <div class="eachPlan">
+                    <img src="./img/bitcoin-icon.png" alt="">
+                    <h1 class="planTitle">Starter Plan</h1>
+                    <p class="planPrice">Plan Price: $26/R467</p>
                     <h3>2Hours Profit: $57 / 6Hours Profit: $67</h3>
+                    <button class="btn planBtn">Buy Plan</button>
                 </div>
-                <button class="btn carouselBtn">Buy Plan</button>
-            </article>
-        </div>
-
-        <div class="eachCarousel">
-            <img src="./img/ethereum-icon.png" alt="">
-            <article class="carouselDesc">
-                <h1 class="carouselTitle">Advance Plan</h1>
-                <p class="carouselPara">Plan Price: $76/R1,363</p>
-                <div class="carouselPrice">
+            </td>
+            <td>
+                <div class="eachPlan">
+                    <img src="./img/ethereum-icon.png" alt="">
+                    <h1 class="planTitle">Advance Plan</h1>
+                    <p class="planPrice">Plan Price: $76/R1,363</p>
                     <h3>2Hours Profit: $167 / 6Hours Profit: $197</h3>
+                    <button class="btn planBtn">Buy Plan</button>
                 </div>
-                <button class="btn carouselBtn">Buy Plan</button>
-            </article>
-        </div>
-
-        <div class="eachCarousel">
-            <img src="./img/tether-icon.png" alt="">
-            <article class="carouselDesc">
-                <h1 class="carouselTitle">Pro Plan</h1>
-                <p class="carouselPara">Plan Price: $185/R3363</p>
-                <div class="carouselPrice">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="eachPlan">
+                    <img src="./img/tether-icon.png" alt="">
+                    <h1 class="planTitle">Pro Plan</h1>
+                    <p class="planPrice">Plan Price: $185/R3363</p>
                     <h3>2Hours Profit: $407 / 6Hours Profit: $481</h3>
+                    <button class="btn planBtn">Buy Plan</button>
                 </div>
-                <button class="btn carouselBtn">Buy Plan</button>
-            </article>
-        </div>
-
-        <div class="eachCarousel">
-            <img src="./img/bitcoin-icon.png" alt="">
-            <article class="carouselDesc">
-                <h1 class="carouselTitle">Expert Plan</h1>
-                <p class="carouselPara">Plan Price: $240/R4340</p>
-                <div class="carouselPrice">
+            </td>
+            <td>
+                <div class="eachPlan">
+                    <img src="./img/bitcoin-icon.png" alt="">
+                    <h1 class="planTitle">Expert Plan</h1>
+                    <p class="planPrice">Plan Price: $240/R4340</p>
                     <h3>2Hours Profit: $528 / 6Hours Profit: $624</h3>
+                    <button class="btn planBtn">Buy Plan</button>
                 </div>
-                <button class="btn carouselBtn">Buy Plan</button>
-            </article>
-        </div>
-
-        <div class="eachCarousel">
-            <img src="./img/ethereum-icon.png" alt="">
-            <article class="carouselDesc">
-                <h1 class="carouselTitle">Max Plan</h1>
-                <p class="carouselPara">Plan Price: $1,006/R18657</p>
-                <div class="carouselPrice">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="eachPlan">
+                    <img src="./img/ethereum-icon.png" alt="">
+                    <h1 class="planTitle">Max Plan</h1>
+                    <p class="planPrice">Plan Price: $1,006/R18657</p>
                     <h3>2Hours Profit: $2006 / 6Hours Profit: $6006</h3>
+                    <button class="btn planBtn">Buy Plan</button>
                 </div>
-                <button class="btn carouselBtn">Buy Plan</button>
-            </article>
-        </div>
-
-        <div class="eachCarousel">
-            <img src="./img/tether-icon.png" alt="">
-            <article class="carouselDesc">
-                <h1 class="carouselTitle">Custom Plan</h1>
-                <p class="carouselPara">Plan Price: $10 To $10,000</p>
-                <div class="carouselPrice">
+            </td>
+            <td>
+                <div class="eachPlan">
+                    <img src="./img/tether-icon.png" alt="">
+                    <h1 class="planTitle">Custom Plan</h1>
+                    <p class="planPrice">Plan Price: $10 To $10,000</p>
                     <h3>Profit: $57 Up to $900007</h3>
+                    <button class="btn planBtn">Custom Plan</button>
                 </div>
-                <button class="btn carouselBtn">Custom Plan</button>
-            </article>
-        </div>
-    </div>
+            </td>
+        </tr>
+    </table>
 </section>
 
 <style>
-    .carouselContainer {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr); /* 2 columns */
-        gap: 20px; /* Space between items */
-        justify-content: center;
-        padding: 20px;
-    }
-
-    .eachCarousel {
-        background-color: #f5f5f5; /* Light background */
-        border-radius: 16px; /* Rounded corners */
-        padding: 20px;
+    .pricingTable {
+        width: 100%;
+        border-collapse: collapse;
         text-align: center;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Soft shadow */
     }
-
-    .eachCarousel img {
-        width: 50px; /* Adjust image size */
+    .pricingTable td {
+        padding: 10px; /* Reduced spacing */
+        vertical-align: top;
+    }
+    .eachPlan {
+        background-color: #f5f5f5;
+        border-radius: 16px;
+        padding: 15px; /* Reduced padding */
+        text-align: center;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        width: 220px; /* Slightly smaller width */
+    }
+    .eachPlan img {
+        width: 50px;
         height: 50px;
-        margin-bottom: 10px;
+        margin-bottom: 5px; /* Reduced margin */
     }
-
-    .carouselTitle {
+    .planTitle {
         font-size: 18px;
         font-weight: bold;
     }
-
-    .carouselPara {
+    .planPrice {
         font-size: 14px;
         color: #333;
     }
-
-    .carouselPrice h3 {
-        font-weight: bold;
-    }
-
-    .carouselBtn {
-        background-color: #5b6ee1; /* Button color */
+    .planBtn {
+        background-color: #5b6ee1;
         color: white;
-        padding: 10px 20px;
+        padding: 8px 16px; /* Smaller button */
         border: none;
-        border-radius: 20px; /* Fully rounded button */
+        border-radius: 20px;
         cursor: pointer;
         transition: 0.3s;
     }
-
-    .carouselBtn:hover {
+    .planBtn:hover {
         background-color: #3e50d4;
     }
 </style>
-
     
-
     <!-- footer -->
     <footer>
         <div class="joinSection">
