--- a/invest.html
+++ b/invest.html
@@ -208,24 +208,29 @@
     </section>
     
    <section>
+ <section>
     <table class="pricingTable">
         <tr>
             <td>
                 <div class="eachPlan">
                     <img src="./img/bitcoin-icon.png" alt="">
-                    <h1 class="planTitle">Starter Plan</h1>
-                    <p class="planPrice">Plan Price: $26/R467</p>
-                    <h3>2Hours Profit: $57 / 6Hours Profit: $67</h3>
-                    <button class="btn planBtn">Buy Plan</button>
+                    <div class="planContent">
+                        <h1 class="planTitle">Starter Plan</h1>
+                        <p class="planPrice">Plan Price: $26/R467</p>
+                        <h3>2Hours Profit: $57 / 6Hours Profit: $67</h3>
+                        <button class="btn planBtn">Buy Plan</button>
+                    </div>
                 </div>
             </td>
             <td>
                 <div class="eachPlan">
                     <img src="./img/ethereum-icon.png" alt="">
-                    <h1 class="planTitle">Advance Plan</h1>
-                    <p class="planPrice">Plan Price: $76/R1,363</p>
-                    <h3>2Hours Profit: $167 / 6Hours Profit: $197</h3>
-                    <button class="btn planBtn">Buy Plan</button>
+                    <div class="planContent">
+                        <h1 class="planTitle">Advance Plan</h1>
+                        <p class="planPrice">Plan Price: $76/R1,363</p>
+                        <h3>2Hours Profit: $167 / 6Hours Profit: $197</h3>
+                        <button class="btn planBtn">Buy Plan</button>
+                    </div>
                 </div>
             </td>
         </tr>
@@ -233,19 +238,23 @@
             <td>
                 <div class="eachPlan">
                     <img src="./img/tether-icon.png" alt="">
-                    <h1 class="planTitle">Pro Plan</h1>
-                    <p class="planPrice">Plan Price: $185/R3363</p>
-                    <h3>2Hours Profit: $407 / 6Hours Profit: $481</h3>
-                    <button class="btn planBtn">Buy Plan</button>
+                    <div class="planContent">
+                        <h1 class="planTitle">Pro Plan</h1>
+                        <p class="planPrice">Plan Price: $185/R3363</p>
+                        <h3>2Hours Profit: $407 / 6Hours Profit: $481</h3>
+                        <button class="btn planBtn">Buy Plan</button>
+                    </div>
                 </div>
             </td>
             <td>
                 <div class="eachPlan">
                     <img src="./img/bitcoin-icon.png" alt="">
-                    <h1 class="planTitle">Expert Plan</h1>
-                    <p class="planPrice">Plan Price: $240/R4340</p>
-                    <h3>2Hours Profit: $528 / 6Hours Profit: $624</h3>
-                    <button class="btn planBtn">Buy Plan</button>
+                    <div class="planContent">
+                        <h1 class="planTitle">Expert Plan</h1>
+                        <p class="planPrice">Plan Price: $240/R4340</p>
+                        <h3>2Hours Profit: $528 / 6Hours Profit: $624</h3>
+                        <button class="btn planBtn">Buy Plan</button>
+                    </div>
                 </div>
             </td>
         </tr>
@@ -253,19 +262,23 @@
             <td>
                 <div class="eachPlan">
                     <img src="./img/ethereum-icon.png" alt="">
-                    <h1 class="planTitle">Max Plan</h1>
-                    <p class="planPrice">Plan Price: $1,006/R18657</p>
-                    <h3>2Hours Profit: $2006 / 6Hours Profit: $6006</h3>
-                    <button class="btn planBtn">Buy Plan</button>
+                    <div class="planContent">
+                        <h1 class="planTitle">Max Plan</h1>
+                        <p class="planPrice">Plan Price: $1,006/R18657</p>
+                        <h3>2Hours Profit: $2006 / 6Hours Profit: $6006</h3>
+                        <button class="btn planBtn">Buy Plan</button>
+                    </div>
                 </div>
             </td>
             <td>
                 <div class="eachPlan">
                     <img src="./img/tether-icon.png" alt="">
-                    <h1 class="planTitle">Custom Plan</h1>
-                    <p class="planPrice">Plan Price: $10 To $10,000</p>
-                    <h3>Profit: $57 Up to $900007</h3>
-                    <button class="btn planBtn">Custom Plan</button>
+                    <div class="planContent">
+                        <h1 class="planTitle">Custom Plan</h1>
+                        <p class="planPrice">Plan Price: $10 To $10,000</p>
+                        <h3>Profit: $57 Up to $900007</h3>
+                        <button class="btn planBtn">Custom Plan</button>
+                    </div>
                 </div>
             </td>
         </tr>
@@ -279,34 +292,39 @@
         text-align: center;
     }
     .pricingTable td {
-        padding: 10px; /* Reduced spacing */
+        padding: 15px;
         vertical-align: top;
     }
     .eachPlan {
         background-color: #f5f5f5;
         border-radius: 16px;
-        padding: 15px; /* Reduced padding */
-        text-align: center;
+        padding: 20px;
+        display: flex;
+        align-items: flex-start;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        width: 220px; /* Slightly smaller width */
+        width: 300px;
     }
     .eachPlan img {
         width: 50px;
         height: 50px;
-        margin-bottom: 5px; /* Reduced margin */
+        margin-right: 10px;
+    }
+    .planContent {
+        text-align: left;
     }
     .planTitle {
         font-size: 18px;
         font-weight: bold;
+        color: black;
     }
-    .planPrice {
+    .planPrice, .eachPlan h3 {
         font-size: 14px;
-        color: #333;
+        color: black;
     }
     .planBtn {
         background-color: #5b6ee1;
         color: white;
-        padding: 8px 16px; /* Smaller button */
+        padding: 10px 16px;
         border: none;
         border-radius: 20px;
         cursor: pointer;
@@ -316,6 +334,7 @@
         background-color: #3e50d4;
     }
 </style>
+
     
     <!-- footer -->
     <footer>
