--- a/invest.html
+++ b/invest.html
@@ -207,93 +207,72 @@
         </div>
     </section>
     
-   <section>
- <section>
-    <table class="pricingTable">
-        <tr>
-            <td>
-                <div class="eachPlan">
-                    <img src="./img/bitcoin-icon.png" alt="">
-                    <div class="planContent">
-                        <h1 class="planTitle">Starter Plan</h1>
-                        <p class="planPrice">Plan Price: $26/R467</p>
-                        <h3>2Hours Profit: $57 / 6Hours Profit: $67</h3>
-                        <button class="btn planBtn">Buy Plan</button>
-                    </div>
-                </div>
-            </td>
-            <td>
-                <div class="eachPlan">
-                    <img src="./img/ethereum-icon.png" alt="">
-                    <div class="planContent">
-                        <h1 class="planTitle">Advance Plan</h1>
-                        <p class="planPrice">Plan Price: $76/R1,363</p>
-                        <h3>2Hours Profit: $167 / 6Hours Profit: $197</h3>
-                        <button class="btn planBtn">Buy Plan</button>
-                    </div>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <div class="eachPlan">
-                    <img src="./img/tether-icon.png" alt="">
-                    <div class="planContent">
-                        <h1 class="planTitle">Pro Plan</h1>
-                        <p class="planPrice">Plan Price: $185/R3363</p>
-                        <h3>2Hours Profit: $407 / 6Hours Profit: $481</h3>
-                        <button class="btn planBtn">Buy Plan</button>
-                    </div>
-                </div>
-            </td>
-            <td>
-                <div class="eachPlan">
-                    <img src="./img/bitcoin-icon.png" alt="">
-                    <div class="planContent">
-                        <h1 class="planTitle">Expert Plan</h1>
-                        <p class="planPrice">Plan Price: $240/R4340</p>
-                        <h3>2Hours Profit: $528 / 6Hours Profit: $624</h3>
-                        <button class="btn planBtn">Buy Plan</button>
-                    </div>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <div class="eachPlan">
-                    <img src="./img/ethereum-icon.png" alt="">
-                    <div class="planContent">
-                        <h1 class="planTitle">Max Plan</h1>
-                        <p class="planPrice">Plan Price: $1,006/R18657</p>
-                        <h3>2Hours Profit: $2006 / 6Hours Profit: $6006</h3>
-                        <button class="btn planBtn">Buy Plan</button>
-                    </div>
-                </div>
-            </td>
-            <td>
-                <div class="eachPlan">
-                    <img src="./img/tether-icon.png" alt="">
-                    <div class="planContent">
-                        <h1 class="planTitle">Custom Plan</h1>
-                        <p class="planPrice">Plan Price: $10 To $10,000</p>
-                        <h3>Profit: $57 Up to $900007</h3>
-                        <button class="btn planBtn">Custom Plan</button>
-                    </div>
-                </div>
-            </td>
-        </tr>
-    </table>
+<section>
+    <div class="pricingContainer">
+        <div class="eachPlan">
+            <img src="./img/bitcoin-icon.png" alt="">
+            <div class="planContent">
+                <h1 class="planTitle">Starter Plan</h1>
+                <p class="planPrice">Plan Price: $26/R467</p>
+                <h3>2Hours Profit: $57 / 6Hours Profit: $67</h3>
+                <button class="btn planBtn">Buy Plan</button>
+            </div>
+        </div>
+        <div class="eachPlan">
+            <img src="./img/ethereum-icon.png" alt="">
+            <div class="planContent">
+                <h1 class="planTitle">Advance Plan</h1>
+                <p class="planPrice">Plan Price: $76/R1,363</p>
+                <h3>2Hours Profit: $167 / 6Hours Profit: $197</h3>
+                <button class="btn planBtn">Buy Plan</button>
+            </div>
+        </div>
+        <div class="eachPlan">
+            <img src="./img/tether-icon.png" alt="">
+            <div class="planContent">
+                <h1 class="planTitle">Pro Plan</h1>
+                <p class="planPrice">Plan Price: $185/R3363</p>
+                <h3>2Hours Profit: $407 / 6Hours Profit: $481</h3>
+                <button class="btn planBtn">Buy Plan</button>
+            </div>
+        </div>
+        <div class="eachPlan">
+            <img src="./img/bitcoin-icon.png" alt="">
+            <div class="planContent">
+                <h1 class="planTitle">Expert Plan</h1>
+                <p class="planPrice">Plan Price: $240/R4340</p>
+                <h3>2Hours Profit: $528 / 6Hours Profit: $624</h3>
+                <button class="btn planBtn">Buy Plan</button>
+            </div>
+        </div>
+        <div class="eachPlan">
+            <img src="./img/ethereum-icon.png" alt="">
+            <div class="planContent">
+                <h1 class="planTitle">Max Plan</h1>
+                <p class="planPrice">Plan Price: $1,006/R18657</p>
+                <h3>2Hours Profit: $2006 / 6Hours Profit: $6006</h3>
+                <button class="btn planBtn">Buy Plan</button>
+            </div>
+        </div>
+        <div class="eachPlan">
+            <img src="./img/tether-icon.png" alt="">
+            <div class="planContent">
+                <h1 class="planTitle">Custom Plan</h1>
+                <p class="planPrice">Plan Price: $10 To $10,000</p>
+                <h3>Profit: $57 Up to $900007</h3>
+                <button class="btn planBtn">Custom Plan</button>
+            </div>
+        </div>
+    </div>
 </section>
 
 <style>
-    .pricingTable {
-        width: 100%;
-        border-collapse: collapse;
-        text-align: center;
-    }
-    .pricingTable td {
-        padding: 15px;
-        vertical-align: top;
+    .pricingContainer {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 20px;
+        justify-content: center;
+        padding: 20px;
     }
     .eachPlan {
         background-color: #f5f5f5;
@@ -302,7 +281,6 @@
         display: flex;
         align-items: flex-start;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        width: 300px;
     }
     .eachPlan img {
         width: 50px;
@@ -332,6 +310,11 @@
     }
     .planBtn:hover {
         background-color: #3e50d4;
+    }
+    @media (max-width: 768px) {
+        .pricingContainer {
+            grid-template-columns: 1fr;
+        }
     }
 </style>
 
